# curve25519-dalek-lean-verify

./: Curve25519Dalek.lean  README.md  Tests.lean  aeneas-config.yml  functions.json  lake-manifest.json  lakefile.toml  package-lock.json  package.json  status.csv
.github/workflows/: aeneas-extract.yml  lean.yml  warning-diff-comment.yml  warning-diff.yml
Curve25519Dalek/: Aux.lean  Funs.lean  FunsExternal.lean  Plausible.lean  PlausibleDomain.lean  Types.lean
Curve25519Dalek/Defs/Edwards/: Representation.lean
Curve25519Dalek/Lint/: Basic.lean  SpecIndent.lean
Curve25519Dalek/Math/: Basic.lean  PrimeCerts.lean
Curve25519Dalek/Math/Edwards/: Curve.lean
Curve25519Dalek/Math/Montgomery/: Curve.lean  Representation.lean
Curve25519Dalek/Math/Ristretto/: Representation.lean
Curve25519Dalek/Specs/Backend/: GetSelectedBackend.lean  VariableBaseMul.lean
Curve25519Dalek/Specs/Backend/Serial/CurveModels/AffineNielsPoint/: Add.lean  AssertReceiverIsTotalEq.lean  ConditionalAssign.lean  ConditionalSelect.lean  Eq.lean  Identity.lean  Neg.lean  Sub.lean
Curve25519Dalek/Specs/Backend/Serial/CurveModels/AffinePoint/: Add.lean  Identity.lean  Neg.lean  Sub.lean
Curve25519Dalek/Specs/Backend/Serial/CurveModels/CompletedPoint/: Add.lean  AsExtended.lean  AsProjective.lean  Identity.lean  Neg.lean  Sub.lean
Curve25519Dalek/Specs/Backend/Serial/CurveModels/ProjectiveNielsPoint/: ConditionalAssign.lean  ConditionalSelect.lean  Identity.lean  Neg.lean  Sub.lean
Curve25519Dalek/Specs/Backend/Serial/CurveModels/ProjectivePoint/: AsExtended.lean  Double.lean  Identity.lean  IsValid.lean
Curve25519Dalek/Specs/Backend/Serial/ScalarMul/VariableBase/: Mul.lean  MulLoop.lean
Curve25519Dalek/Specs/Backend/Serial/ScalarMul/VartimeDoubleBase/: Mul.lean
Curve25519Dalek/Specs/Backend/Serial/U64/Constants/: Aplus2OverFour.lean  Ed25519BasepointPoint.lean  EdwardsD.lean  EdwardsD2.lean  EdwardsDMinusOneSquared.lean  EightTorsion.lean  InvsqrtAMinusD.lean  L.lean  Lfactor.lean  MINUS_ONE.lean  MONTGOMERY_A.lean  MONTGOMERY_A_NEG.lean  MinusOne.lean  MontgomeryA.lean  MontgomeryANeg.lean  OneMinusEdwardsDSquared.lean  R.lean  RR.lean  SQRT_AD_MINUS_ONE.lean  SqrtAdMinusOne.lean  SqrtM1.lean
Curve25519Dalek/Specs/Backend/Serial/U64/Field/FieldElement51/: Add.lean  AddAssign.lean  AsBytes.lean  ConditionalAssign.lean  ConditionalSelect.lean  ConditionalSwap.lean  CtEq.lean  Eq.lean  FromBytes.lean  FromLimbs.lean  MINUS_ONE.lean  Mul.lean  Neg.lean  Negate.lean  ONE.lean  Pow2K.lean  Reduce.lean  Square.lean  Square2.lean  Sub.lean  SubAssign.lean  ToBytes.lean  ZERO.lean
Curve25519Dalek/Specs/Backend/Serial/U64/Scalar/: M.lean
Curve25519Dalek/Specs/Backend/Serial/U64/Scalar/Scalar52/: Add.lean  AsMontgomery.lean  ConditionalAddL.lean  FromBytes.lean  FromBytesWide.lean  FromMontgomery.lean  Index.lean  IndexMut.lean  Invert.lean  MontgomeryInvert.lean  MontgomeryMul.lean  MontgomeryReduce.lean  MontgomerySquare.lean  Mul.lean  MulInternal.lean  Pack.lean  Square.lean  SquareInternal.lean  SquareMultiply.lean  Sub.lean  ToBytes.lean  Zero.lean
Curve25519Dalek/Specs/Constants/: BASEPOINT_ORDER_PRIVATE.lean  RISTRETTO_BASEPOINT_POINT.lean
Curve25519Dalek/Specs/Edwards/: Compress.lean
Curve25519Dalek/Specs/Edwards/Affine/AffinePoint/: Compress.lean  ConditionalSelect.lean  CtEq.lean  Default.lean  Eq.lean  Identity.lean  Mul.lean  ToEdwards.lean
Curve25519Dalek/Specs/Edwards/CompressedEdwardsY/: AsBytes.lean  CtEq.lean  Decompress.lean  FromSlice.lean  Identity.lean  Step1.lean  Step2.lean  ToBytes.lean
Curve25519Dalek/Specs/Edwards/EdwardsPoint/: Add.lean  AsAffineNiels.lean  AsProjective.lean  AsProjectiveNiels.lean  Compress.lean  ConditionalSelect.lean  CtEq.lean  Double.lean  Eq.lean  Identity.lean  IsSmallOrder.lean  IsTorsionFree.lean  Mul.lean  MulBase.lean  MulBaseClamped.lean  MulByCofactor.lean  MulByPow2.lean  MulClamped.lean  Neg.lean  Sub.lean  ToAffine.lean  ToMontgomery.lean  VartimeDoubleScalarMulBasepoint.lean
Curve25519Dalek/Specs/Field/FieldElement51/: InvSqrt.lean  Invert.lean  IsNegative.lean  IsZero.lean  Pow22501.lean  PowP58.lean  SqrtRatioi.lean
Curve25519Dalek/Specs/Montgomery/MontgomeryPoint/: AsAffine.lean  ConditionalSelect.lean  CtEq.lean  DifferentialAddAndDouble.lean  ElligatorEncode.lean  Eq.lean  Identity.lean  Mul.lean  MulAssign.lean  MulBase.lean  MulBaseClamped.lean  MulClamped.lean  ToEdwards.lean
Curve25519Dalek/Specs/Montgomery/ProjectivePoint/: DifferentialAddAndDouble.lean
Curve25519Dalek/Specs/Ristretto/CompressedRistretto/: Decompress.lean  FromSlice.lean  Step1.lean  Step2.lean
Curve25519Dalek/Specs/Ristretto/RistrettoPoint/: Compress.lean  CtEq.lean  ElligatorRistrettoFlavor.lean  FromUniformBytes.lean  Neg.lean
Curve25519Dalek/Specs/Scalar/: ReadLeU64Into.lean
Curve25519Dalek/Specs/Scalar/Scalar/: AsRadix16.lean  AsRadix2w.lean  BatchInvert.lean  Default.lean  FromU128.lean  FromU16.lean  FromU32.lean  FromU64.lean  Index.lean  Reduce.lean  Unpack.lean
Curve25519Dalek/Specs/Traits/: IsIdentity.lean
Curve25519Dalek/Specs/Window/LookupTable/: From.lean  Select.lean
Tests/LinterTest/: SpecIndent.lean
Tests/PlausibleTests/: PlausibleTests.lean
Utils/: Config.lean  ListFuns.lean  SyncStatus.lean
Utils/Lib/: Analysis.lean  Docstring.lean  ListFuns.lean  StatusCsv.lean  Types.lean
curve25519-dalek/: Cargo.toml
scripts/: aeneas-extract.ts  aeneas-install.ts  build-rust-docs.sh  inject-lean-verification.ts
scripts/lib/: config.ts
